# hive

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json  vercel.json
engine/: Cargo.toml  README.md
engine/src/: board.rs  freedom.rs  game.rs  hive_check.rs  lib.rs  moves.rs  piece.rs  rules.rs  wasm.rs
engine/src/ai/: difficulty.rs  eval.rs  mcts.rs  minimax.rs  mod.rs
engine/tests/: comprehensive_rule_tests.rs  game_tests.rs  rule_tests.rs
training/: Cargo.toml
training/src/: main.rs
web/: package-lock.json  package.json
web/public/wasm/: hive_engine.d.ts  hive_engine.js  hive_engine_bg.wasm  hive_engine_bg.wasm.d.ts  package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/board/: HexGrid.tsx
web/src/components/game/: AnalysisPanel.tsx  GameTimer.tsx  GameView.tsx  PlayerHand.tsx  ReplayView.tsx
web/src/components/setup/: GameSetup.tsx  SavedGames.tsx
web/src/hooks/: useDarkMode.ts  useGameEngine.ts
web/src/lib/: gameRecorder.ts  types.ts  wasm-loader.ts
web/src/themes/: clean.ts  index.ts  minimal.ts  polished.ts  retro.ts  types.ts
