[package]
name = "hive-engine"
version = "0.1.0"
edition = "2021"
description = "Hive board game engine — rules, move generation, and AI"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
getrandom = { version = "0.2", features = ["js"] }
rand = "0.8"

[dev-dependencies]
