[package]
name = "hive-training"
version = "0.1.0"
edition = "2021"
description = "Local training tools for the Hive AI — self-play and opening book generation"

[[bin]]
name = "train"
path = "src/main.rs"

[dependencies]
hive-engine = { path = "../engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = "0.8"
